# isshub

./: .gitignore  .gitmessage  .readthedocs.yml  LICENSE  Makefile  README.rst  pylintrc  setup.cfg  setup.py  test_testing.feature  test_testing.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
ci/: check-every-commit.sh  check_commit_message.py
docs/: README.rst  conf.py  domain_contexts_diagrams.py  git_to_sphinx.py  index.rst  internals.rst
docs/_static/css/: custom.css  gherkin.css
docs/_static/js/: custom.js
docs/apidoc_templates/: module.rst_t  package.rst_t
isshub/: __init__.py
isshub/domain/: __init__.py
isshub/domain/contexts/: __init__.py
isshub/domain/contexts/code_repository/: __init__.py
isshub/domain/contexts/code_repository/entities/: __init__.py
isshub/domain/contexts/code_repository/entities/namespace/: __init__.py
isshub/domain/contexts/code_repository/entities/namespace/features/: describe.feature
isshub/domain/contexts/code_repository/entities/namespace/tests/: __init__.py  factories.py  fixtures.py  test_describe.py
isshub/domain/contexts/code_repository/entities/repository/: __init__.py
isshub/domain/contexts/code_repository/entities/repository/features/: describe.feature
isshub/domain/contexts/code_repository/entities/repository/tests/: __init__.py  factories.py  fixtures.py  test_describe.py
isshub/domain/contexts/code_repository/repositories/: __init__.py
isshub/domain/contexts/code_repository/repositories/namespace/: __init__.py
isshub/domain/contexts/code_repository/repositories/namespace/features/: storage.feature
isshub/domain/contexts/code_repository/repositories/namespace/tests/: __init__.py  test_storage.py
isshub/domain/contexts/code_repository/repositories/repository/: __init__.py
isshub/domain/contexts/code_repository/repositories/repository/features/: storage.feature
isshub/domain/contexts/code_repository/repositories/repository/tests/: __init__.py  test_storage.py
isshub/domain/contexts/core/: __init__.py
isshub/domain/contexts/core/entities/: __init__.py
isshub/domain/contexts/core/entities/namespace/: __init__.py
isshub/domain/contexts/core/entities/namespace/features/: describe.feature
isshub/domain/contexts/core/entities/namespace/tests/: __init__.py  factories.py  fixtures.py  test_describe.py
isshub/domain/contexts/core/entities/repository/: __init__.py
isshub/domain/contexts/core/entities/repository/features/: describe.feature
isshub/domain/contexts/core/entities/repository/tests/: __init__.py  factories.py  fixtures.py  test_describe.py
isshub/domain/utils/: __init__.py  entity.py  mypy_plugin.py  repository.py
isshub/domain/utils/testing/: __init__.py  validation.py
