[metadata]
name = isshub
description = Yout essential Git.Hub.Lab companion
long_description = file:README.rst
version = 0
author = Stéphane "Twidi" Angel
author_email = s.angel@twidi.com
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
keywords =
    issues
    github
    gitlab
url = https://github.com/Isshub-io/isshub
requires-python = >=3.7

[options]
zip_safe = True
packages = find:

[options.packages.find]
exclude =
    tests
[options.extras_require]
dev =
    ipython
    wheel
tests =
    pytest
    pytest-cov
    pytest-sugar
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx_rtd_theme
    sphinxprettysearchresults

[tool:pytest]
addopts =
    --cov=isshub
    --cov-report term-missing:skip-covered
    --doctest-modules
    --ignore setup.py
    --ignore docs
    --pyargs

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
    raise NotImplementedError
