[metadata]
name = isshub
description = Yout essential Git.Hub.Lab companion
long_description = file:README.rst
version = 0
author = Stéphane "Twidi" Angel
author_email = s.angel@twidi.com
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
keywords =
    issues
    github
    gitlab
url = https://github.com/Isshub-io/isshub
requires-python = >=3.7

[options]
zip_safe = True
packages = find:

[options.packages.find]
exclude =
    tests
[options.extras_require]
dev =
    ipython
    mypy
    wheel
tests =
    pytest
    pytest-bdd
    pytest-cov
    pytest-sugar
lint=
    black
    colorama
    flake8
    flake8-bugbear
    flake8-comprehensions
    flake8-docstrings
    flake8-formatter-abspath
    flake8-imports
    flake8-mypy
    gitpython
    isort
    pycodestyle
    pydocstyle
    pylint
docs =
    cached-property
    pydriller
    Pygments
    rstcheck
    sphinx
    sphinx-autodoc-typehints
    sphinx_rtd_theme
    sphinxprettysearchresults

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
# because of django models for example
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
python_version = 3.6
strict_optional = true
warn_incomplete_stub = true

[mypy-isshub.*.tests.*]
ignore_errors = True

[mypy-test_testing]
ignore_errors = True


[flake8]
ignore =
    # Line too long: we let black manage it
    E501
    # Line break occurred before a binary operator: we let black manage it
    W503
    # Allow assigning lambda expressions
    E731
max-line-length = 99
max-complexity = 15
select =
    # flake8 error class
    F
    # mccabe plugin
    C
    # pycodestyle plugin
    E
    W
    # docstrings (using pydocstyle) plugin
    D
    # mypy plugin
    T4
    # bugbear plugin
    B
    B9
    B950
    # pep3101 (enforce .format over %) plugin
    S001
exclude =
    manage.py
    stubs.py
    */migrations/*.py
    docs/
    *.egg-info
    dist/
    build/
    ci/
    test_testing.py
per-file-ignores =
    # ignore mypy missing annotations in tests
    test_*:T4
    factories.py:T4

[pycodestyle]
max-line-length = 99

[tool:pytest]
addopts =
    --cov=isshub
    --cov-report term-missing:skip-covered
    --doctest-modules
    --ignore setup.py
    --ignore docs
    --ignore ci
    --pyargs

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
    raise NotImplementedError

[isort]
combine_as_imports=1
default_section=THIRDPARTY
include_trailing_comma=true
indent='    '
known_thirdparty_python=factory,pytest,pytest_bdd
known_first_party=isshub
line_length=88
lines_after_imports=2
multi_line_output=3
not_skip = __init__.py
sections=FUTURE,STDLIB,THIRDPARTY_PYTHON,DRF,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses=1
